shoved globals into common class

--- a/NorthWind/NorthWind.csproj
+++ b/NorthWind/NorthWind.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Common.cs" />
     <Compile Include="Customer.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
